# gameoflife

./: .gitignore  CMakeLists.txt  README.md  gosper_glider_gun.txt  test.txt
src/: CMakeLists.txt  CellMap.cpp  CellMap.h  Rectangle.h  Window.h  main.cpp
